# imprompt-sdk

./: .buildinfo  CNAME  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/chats_and_flows/: agents.doctree  assignments.doctree  flows_and_tasks.doctree  index.doctree  plugins.doctree  prompts.doctree
.doctrees/imprompt_suite/: index.doctree
.doctrees/llm_gateway/: index.doctree
.doctrees/marketplace/: assets.doctree  catalog.doctree  index.doctree  introduction.doctree
.doctrees/opensource_projects/: index.doctree  openplugin.doctree  permutate.doctree
.doctrees/sdk/: index.doctree  setup.doctree
.doctrees/tutorials/: create_plugin_3rd_party_api.doctree  index.doctree  openplugins.doctree
.github/workflows/: doc_publish.yml
_sources/: index.rst
_sources/chats_and_flows/: agents.rst  flows_and_tasks.rst  plugins.rst
_sources/imprompt_suite/: index.rst
_sources/marketplace/: assets.rst  catalog.rst  index.rst  introduction.rst
_sources/opensource_projects/: index.rst  openplugin.rst
chats_and_flows/: agents.html  assignments.html  flows_and_tasks.html  index.html  plugins.html  prompts.html
imprompt/: __init__.py
imprompt_sdk/: README.md
imprompt_suite/: index.html
llm_gateway/: index.html
marketplace/: assets.html  catalog.html  index.html  introduction.html
opensource_projects/: index.html  openplugin.html  permutate.html
sdk/: index.html  setup.html
tutorials/: create_plugin_3rd_party_api.html  index.html  openplugins.html
(+107 files in other folders)
