[tool.poetry]
name = "imprompt-sdk"
version = "0.1.0"
description = ""
authors = ["shrikant <shrikant.pm14@gmail.com>"]
readme = "README.md"
packages = [{include = "imprompt_sdk"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.1.1"


[tool.poetry.group.docs.dependencies]
nbsphinx = "^0.9.2"
sphinx-autobuild = "^2021.3.14"
sphinx = "6.2.1"
sphinx-book-theme = "^1.0.1"
toml = "^0.10.2"
sphinx-copybutton = "^0.5.2"
sphinx-tabs = "^3.4.1"


[tool.poetry.group.test.dependencies]
poethepoet = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
build_docs = "sphinx-build docs/source _build"